Update CI workflow for EC2 deployment and adjust Docker Compose port mapping

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,34 +40,29 @@ jobs:
           docker push ${{ secrets.ECR_REPOSITORY_URI }}:$IMAGE_TAG
           echo "image=${{ secrets.ECR_REPOSITORY_URI }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      # Fetch ECS Task Definition
-      - name: Fetch ECS Task Definition
-        id: fetch-task-def
-        run: |
-          aws ecs describe-task-definition \
-            --task-definition ${{ secrets.ECS_TASK_DEFINITION }} \
-            --query taskDefinition > task-definition.json
-
-      # Clean Task Definition File
-      - name: Clean Task Definition File
-        id: clean-task-def
-        run: |
-          jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-definition.json > task-definition-cleaned.json
-
-      # Register New ECS Task Definition Revision
-      - name: Register New ECS Task Definition Revision
-        id: register-task-def
-        run: |
-          TASK_DEF_ARN=$(aws ecs register-task-definition \
-            --cli-input-json file://task-definition-cleaned.json \
-            --query 'taskDefinition.taskDefinitionArn' --output text)
-          echo "task-definition=$TASK_DEF_ARN" >> $GITHUB_ENV
-
-      # Deploy ECS Task Definition
-      - name: Deploy ECS Task Definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@df9643053eda01f169e64a0e60233aacca83799a
+      # Deploy to EC2 instance
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
         with:
-          task-definition: ${{ env.task-definition }}
-          service: ${{ secrets.ECS_SERVICE }}
-          cluster: ${{ secrets.ECS_CLUSTER }}
-          wait-for-service-stability: true
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # Login to ECR from EC2
+            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY_URI }}
+
+            # Pull the latest image
+            docker pull ${{ secrets.ECR_REPOSITORY_URI }}:${{ github.sha }}
+
+            # Stop and remove the old container if it exists
+            docker stop myapp || true
+            docker rm myapp || true
+
+            # Run the new container
+            docker run -d \
+              --name myapp \
+              -p 80:80 \
+              ${{ secrets.ECR_REPOSITORY_URI }}:${{ github.sha }}
+
+            # Clean up old images
+            docker system prune -f
